src/objects/Vendor_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Distributed__c</fullName>
        <description>to store amount that is already distributed</description>
        <label>Amount Distributed</label>
        <summarizedField>Vendor_Invoice_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Vendor_Invoice_Line__c.Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <formula>Amount__c -  Amount_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Sent__c</fullName>
        <label>Amount Sent</label>
        <summarizedField>Vendor_Invoice_Payment__c.Amount_Paid__c</summarizedField>
        <summaryForeignKey>Vendor_Invoice_Payment__c.Vendor_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <formula>HYPERLINK(Journal_Entry__c,Journal_Entry__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Journal Entry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Shipping__c</fullName>
        <label>Freight/Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Notes_on_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Notes on Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Index__c</fullName>
        <label>Insert Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>field used for development purpose</description>
        <label>Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipLabel>Vendor Invoices</relationshipLabel>
        <relationshipName>Vendor_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to fill status of post - not to be included in page layout</description>
        <label>Post Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <description>Field used to show posted date on vendor invoice detail page</description>
        <formula>Post_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <formula>Post_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax %</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Check</label>
        <referenceTo>Vendor_Invoice_Check__c</referenceTo>
        <relationshipLabel>Vendor Invoices</relationshipLabel>
        <relationshipName>Vendor_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor, Reciprocal Club</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoices</relationshipLabel>
        <relationshipName>Vendor_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Invoice</label>
    <nameField>
        <displayFormat>VNDRINVENTR-{0000000}</displayFormat>
        <label>Vendor Invoice Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoices</pluralLabel>
    <recordTypes>
        <fullName>Accounts_Payable</fullName>
        <active>true</active>
        <label>Accounts Payable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <label>Purchase Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>